--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,10 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
-a,
+a {
+  text-decoration: none;
+  color: hsla(160, 100%, 37%, 1);
+  transition: 0.4s;
+}
+
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
-  padding: 3px;
 }
